RESOLVED FIXED 85248
RenderObject incorrectly lists maximalOutlineSize as a LayoutUnit
https://bugs.webkit.org/show_bug.cgi?id=85248
Summary RenderObject incorrectly lists maximalOutlineSize as a LayoutUnit
Levi Weintraub
Reported 2012-04-30 17:27:58 PDT
maximalOutlineSize is dirty rect slop that doesn't need to accumulate error. It also derives its value from RenderView's value, which is already an integer.
Attachments
Patch (2.21 KB, patch)
2012-04-30 17:48 PDT, Levi Weintraub
no flags
Levi Weintraub
Comment 1 2012-04-30 17:48:53 PDT
Eric Seidel (no email)
Comment 2 2012-04-30 17:49:29 PDT
Comment on attachment 139553 [details] Patch OK.
Levi Weintraub
Comment 3 2012-04-30 17:50:27 PDT
A new record!!!! 36 seconds!
WebKit Review Bot
Comment 4 2012-04-30 19:15:06 PDT
Comment on attachment 139553 [details] Patch Clearing flags on attachment: 139553 Committed r115701: <http://trac.webkit.org/changeset/115701>
WebKit Review Bot
Comment 5 2012-04-30 19:15:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.