RenderObject incorrectly lists maximalOutlineSize as a LayoutUnit https://bugs.webkit.org/show_bug.cgi?id=85248

Reviewed by Eric Seidel.

Reverting RenderObject::maximalOutlineSize to int. This is a slop value for repaint
rects that doesn't affect layout. It also derives its value from RenderView's function
of the same name, which is already an integer.

No new tests. No change in behavior.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::maximalOutlineSize):
* rendering/RenderObject.h:
(RenderObject):


Canonical link: https://commits.webkit.org/102799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115701 268f45cc-cd09-0410-ab3c-d52691b4dbfc